
numcosmo_sources = []
numcosmo_sub_includedir = numcosmo_includedir / 'numcosmo'

numcosmo_build_cfg_h = configure_file(
    input: 'build_cfg.h.in',
    output: 'build_cfg.h',
    install_dir: join_paths(get_option('libdir'), 'numcosmo/include'),
    install_tag: 'devel',
    configuration: numcosmo_build_cfg,
)
numcosmo_sources += numcosmo_build_cfg_h

subdir('sundials')

ncm_sources = files(
    'math/ncm_abc.c',
    'math/ncm_binsplit.c',
    'math/ncm_bootstrap.c',
    'math/ncm_c.c',
    'math/ncm_calc.c',
    'math/ncm_cfg.c',
    'math/ncm_csq1d.c',
    'math/ncm_data.c',
    'math/ncm_data_dist1d.c',
    'math/ncm_data_dist2d.c',
    'math/ncm_data_funnel.c',
    'math/ncm_data_gauss.c',
    'math/ncm_data_gauss_cov.c',
    'math/ncm_data_gauss_cov_mvnd.c',
    'math/ncm_data_gauss_diag.c',
    'math/ncm_data_gaussmix2d.c',
    'math/ncm_data_poisson.c',
    'math/ncm_data_rosenbrock.c',
    'math/ncm_dataset.c',
    'math/ncm_diff.c',
    'math/ncm_fftlog.c',
    'math/ncm_fftlog_gausswin2.c',
    'math/ncm_fftlog_sbessel_j.c',
    'math/ncm_fftlog_sbessel_jljm.c',
    'math/ncm_fftlog_tophatwin2.c',
    'math/ncm_fit.c',
    'math/ncm_fit_esmcmc.c',
    'math/ncm_fit_esmcmc_walker.c',
    'math/ncm_fit_esmcmc_walker_apes.c',
    'math/ncm_fit_esmcmc_walker_stretch.c',
    'math/ncm_fit_esmcmc_walker_walk.c',
    'math/ncm_fit_gsl_ls.c',
    'math/ncm_fit_gsl_mm.c',
    'math/ncm_fit_gsl_mms.c',
    'math/ncm_fit_levmar.c',
    'math/ncm_fit_mc.c',
    'math/ncm_fit_mcbs.c',
    'math/ncm_fit_mcmc.c',
    'math/ncm_fit_state.c',
    'math/ncm_func_eval.c',
    'math/ncm_function_cache.c',
    'math/ncm_hoaa.c',
    'math/ncm_integral1d.c',
    'math/ncm_integral1d_ptr.c',
    'math/ncm_integral_nd.c',
    'math/ncm_integrate.c',
    'math/ncm_iset.c',
    'math/ncm_lapack.c',
    'math/ncm_lh_ratio1d.c',
    'math/ncm_lh_ratio2d.c',
    'math/ncm_likelihood.c',
    'math/ncm_matrix.c',
    'math/ncm_memory_pool.c',
    'math/ncm_model.c',
    'math/ncm_model_builder.c',
    'math/ncm_model_ctrl.c',
    'math/ncm_model_funnel.c',
    'math/ncm_model_mvnd.c',
    'math/ncm_model_rosenbrock.c',
    'math/ncm_mpi_job.c',
    'math/ncm_mpi_job_feval.c',
    'math/ncm_mpi_job_fit.c',
    'math/ncm_mpi_job_mcmc.c',
    'math/ncm_mpi_job_test.c',
    'math/ncm_mpsf_0F1.c',
    'math/ncm_mpsf_sbessel.c',
    'math/ncm_mpsf_trig_int.c',
    'math/ncm_mset.c',
    'math/ncm_mset_catalog.c',
    'math/ncm_mset_func.c',
    'math/ncm_mset_func1.c',
    'math/ncm_mset_func_list.c',
    'math/ncm_mset_trans_kern.c',
    'math/ncm_mset_trans_kern_cat.c',
    'math/ncm_mset_trans_kern_flat.c',
    'math/ncm_mset_trans_kern_gauss.c',
    'math/ncm_nnls.c',
    'math/ncm_obj_array.c',
    'math/ncm_ode.c',
    'math/ncm_ode_eval.c',
    'math/ncm_ode_spline.c',
    'math/ncm_powspec.c',
    'math/ncm_powspec_corr3d.c',
    'math/ncm_powspec_filter.c',
    'math/ncm_powspec_sphere_proj.c',
    'math/ncm_prior.c',
    'math/ncm_prior_flat.c',
    'math/ncm_prior_flat_func.c',
    'math/ncm_prior_flat_param.c',
    'math/ncm_prior_gauss.c',
    'math/ncm_prior_gauss_func.c',
    'math/ncm_prior_gauss_param.c',
    'math/ncm_quaternion.c',
    'math/ncm_reparam.c',
    'math/ncm_reparam_linear.c',
    'math/ncm_rng.c',
    'math/ncm_serialize.c',
    'math/ncm_sf_sbessel.c',
    'math/ncm_sf_spherical_harmonics.c',
    'math/ncm_sparam.c',
    'math/ncm_sphere_map.c',
    'math/ncm_spline.c',
    'math/ncm_spline2d.c',
    'math/ncm_spline2d_bicubic.c',
    'math/ncm_spline2d_gsl.c',
    'math/ncm_spline2d_spline.c',
    'math/ncm_spline_cubic.c',
    'math/ncm_spline_cubic_d2.c',
    'math/ncm_spline_cubic_notaknot.c',
    'math/ncm_spline_func.c',
    'math/ncm_spline_func_test.c',
    'math/ncm_spline_gsl.c',
    'math/ncm_spline_rbf.c',
    'math/ncm_stats_dist.c',
    'math/ncm_stats_dist1d.c',
    'math/ncm_stats_dist1d_epdf.c',
    'math/ncm_stats_dist1d_spline.c',
    'math/ncm_stats_dist2d.c',
    'math/ncm_stats_dist2d_spline.c',
    'math/ncm_stats_dist_kde.c',
    'math/ncm_stats_dist_kernel.c',
    'math/ncm_stats_dist_kernel_gauss.c',
    'math/ncm_stats_dist_kernel_st.c',
    'math/ncm_stats_dist_vkde.c',
    'math/ncm_stats_vec.c',
    'math/ncm_timer.c',
    'math/ncm_util.c',
    'math/ncm_vector.c',
    'math/ncm_vparam.c',
    'ncm_build_inline.c',
)

ncm_sources_nogi = files()

ncm_headers = files(
    'math/ncm_abc.h',
    'math/ncm_binsplit.h',
    'math/ncm_bootstrap.h',
    'math/ncm_c.h',
    'math/ncm_calc.h',
    'math/ncm_cfg.h',
    'math/ncm_csq1d.h',
    'math/ncm_data.h',
    'math/ncm_data_dist1d.h',
    'math/ncm_data_dist2d.h',
    'math/ncm_data_funnel.h',
    'math/ncm_data_gauss.h',
    'math/ncm_data_gauss_cov.h',
    'math/ncm_data_gauss_cov_mvnd.h',
    'math/ncm_data_gauss_diag.h',
    'math/ncm_data_gaussmix2d.h',
    'math/ncm_data_poisson.h',
    'math/ncm_data_rosenbrock.h',
    'math/ncm_dataset.h',
    'math/ncm_diff.h',
    'math/ncm_fftlog.h',
    'math/ncm_fftlog_gausswin2.h',
    'math/ncm_fftlog_sbessel_j.h',
    'math/ncm_fftlog_sbessel_jljm.h',
    'math/ncm_fftlog_tophatwin2.h',
    'math/ncm_fit.h',
    'math/ncm_fit_esmcmc.h',
    'math/ncm_fit_esmcmc_walker.h',
    'math/ncm_fit_esmcmc_walker_apes.h',
    'math/ncm_fit_esmcmc_walker_stretch.h',
    'math/ncm_fit_esmcmc_walker_walk.h',
    'math/ncm_fit_gsl_ls.h',
    'math/ncm_fit_gsl_mm.h',
    'math/ncm_fit_gsl_mms.h',
    'math/ncm_fit_levmar.h',
    'math/ncm_fit_mc.h',
    'math/ncm_fit_mcbs.h',
    'math/ncm_fit_mcmc.h',
    'math/ncm_fit_state.h',
    'math/ncm_func_eval.h',
    'math/ncm_function_cache.h',
    'math/ncm_hoaa.h',
    'math/ncm_integral1d.h',
    'math/ncm_integral1d_ptr.h',
    'math/ncm_integral_nd.h',
    'math/ncm_integrate.h',
    'math/ncm_iset.h',
    'math/ncm_lapack.h',
    'math/ncm_lh_ratio1d.h',
    'math/ncm_lh_ratio2d.h',
    'math/ncm_likelihood.h',
    'math/ncm_matrix.h',
    'math/ncm_memory_pool.h',
    'math/ncm_model.h',
    'math/ncm_model_builder.h',
    'math/ncm_model_ctrl.h',
    'math/ncm_model_funnel.h',
    'math/ncm_model_mvnd.h',
    'math/ncm_model_rosenbrock.h',
    'math/ncm_mpi_job.h',
    'math/ncm_mpi_job_feval.h',
    'math/ncm_mpi_job_fit.h',
    'math/ncm_mpi_job_mcmc.h',
    'math/ncm_mpi_job_test.h',
    'math/ncm_mpsf_0F1.h',
    'math/ncm_mpsf_sbessel.h',
    'math/ncm_mpsf_trig_int.h',
    'math/ncm_mset.h',
    'math/ncm_mset_catalog.h',
    'math/ncm_mset_func.h',
    'math/ncm_mset_func1.h',
    'math/ncm_mset_func_list.h',
    'math/ncm_mset_trans_kern.h',
    'math/ncm_mset_trans_kern_cat.h',
    'math/ncm_mset_trans_kern_flat.h',
    'math/ncm_mset_trans_kern_gauss.h',
    'math/ncm_nnls.h',
    'math/ncm_obj_array.h',
    'math/ncm_ode.h',
    'math/ncm_ode_eval.h',
    'math/ncm_ode_spline.h',
    'math/ncm_powspec.h',
    'math/ncm_powspec_corr3d.h',
    'math/ncm_powspec_filter.h',
    'math/ncm_powspec_sphere_proj.h',
    'math/ncm_prior.h',
    'math/ncm_prior_flat.h',
    'math/ncm_prior_flat_func.h',
    'math/ncm_prior_flat_param.h',
    'math/ncm_prior_gauss.h',
    'math/ncm_prior_gauss_func.h',
    'math/ncm_prior_gauss_param.h',
    'math/ncm_quaternion.h',
    'math/ncm_reparam.h',
    'math/ncm_reparam_linear.h',
    'math/ncm_rng.h',
    'math/ncm_serialize.h',
    'math/ncm_sf_sbessel.h',
    'math/ncm_sf_spherical_harmonics.h',
    'math/ncm_sparam.h',
    'math/ncm_sphere_map.h',
    'math/ncm_spline.h',
    'math/ncm_spline2d.h',
    'math/ncm_spline2d_bicubic.h',
    'math/ncm_spline2d_gsl.h',
    'math/ncm_spline2d_spline.h',
    'math/ncm_spline_cubic.h',
    'math/ncm_spline_cubic_d2.h',
    'math/ncm_spline_cubic_notaknot.h',
    'math/ncm_spline_func.h',
    'math/ncm_spline_func_test.h',
    'math/ncm_spline_gsl.h',
    'math/ncm_spline_rbf.h',
    'math/ncm_stats_dist.h',
    'math/ncm_stats_dist1d.h',
    'math/ncm_stats_dist1d_epdf.h',
    'math/ncm_stats_dist1d_spline.h',
    'math/ncm_stats_dist2d.h',
    'math/ncm_stats_dist2d_spline.h',
    'math/ncm_stats_dist_kde.h',
    'math/ncm_stats_dist_kernel.h',
    'math/ncm_stats_dist_kernel_gauss.h',
    'math/ncm_stats_dist_kernel_st.h',
    'math/ncm_stats_dist_vkde.h',
    'math/ncm_stats_vec.h',
    'math/ncm_timer.h',
    'math/ncm_util.h',
    'math/ncm_vector.h',
    'math/ncm_vparam.h',
)

ncm_headers_nogi = files('math/ncm_flapack.h', 'math/ncm_gsl_blas_types.h')

ncm_headers_internal = files(
    'math/ncm_stats_dist_kde_private.h',
    'math/ncm_stats_dist_kernel_private.h',
    'math/ncm_stats_dist_private.h',
    'math/ncm_stats_dist_vkde_private.h',
    'perturbations/nc_hipert_private.h',
)

gnome = import('gnome')

ncm_enum_types = gnome.mkenums(
    'ncm_enum_types',
    c_template: 'ncm_enum_types.c.template',
    h_template: 'ncm_enum_types.h.template',
    sources: ncm_headers,
)

install_headers(ncm_headers, install_dir: numcosmo_sub_includedir)

sundials_inc = include_directories('sundials/include')
libcuba_inc = include_directories('libcuba')

numcosmo_c_args = ['-DG_LOG_DOMAIN="NUMCOSMO"', '-DHAVE_CONFIG_H']
libnumcosmo = library(
    'numcosmo',
    sources: [
        ncm_sources,
        ncm_headers,
        ncm_sources_nogi,
        ncm_headers_nogi,
        ncm_headers_internal,
        numcosmo_sources,
        ncm_enum_types,
    ],
    version: library_version,
    soversion: soversion,
    darwin_versions: darwin_versions,
    install: true,
    # intl.lib is not compatible with SAFESEH
    link_args: [noseh_link_args],
    include_directories: [configinc, sundials_inc, libcuba_inc],
    link_with: [libsundials],
    dependencies: [glib_dep, gobject_dep, omp_c, gsl_dep, gmp_dep, mpfr_dep, blas],
    c_args: numcosmo_c_args,
    objc_args: numcosmo_c_args,
    gnu_symbol_visibility: 'hidden',
)

